Fixing alignment issues on mobile view

--- a/styles/index.css
+++ b/styles/index.css
@@ -33,7 +33,7 @@ button{
     display: flex;
     align-items: center;
     gap: 5px;
-    padding: 10px 10px;
+    padding: 5px;
     margin-top: 10px;
     font-size: 12px;
     font-weight: 600;
@@ -106,8 +106,7 @@ button{
     left: 0;
     z-index: 2;
     color: white;
-    padding-left: 5%;
-    padding-right: 5%;
+    padding: 0 3px;
 }
 
 .intro__container {
